# CritiPrefill

./: .gitignore  README.md  config.py  eval.py  hijack_llama.py  kv_cache.py  main.py  main_api.py  makefile  modeling_patch.py  pred.py  prediction.py  pyproject.toml  quick_prefill.py  requirements.txt  run_needle_in_haystack.py  run_pred.sh  viz.py
attn_viewer/: loogle_SD_mixup_128k_1.jsonl  main.py  makefile
attn_viewer/ops/: .gitignore  build.py  makefile
attn_viewer/ops/csrc/: cuda_api.cu  static_switch.h
attn_viewer/ops/csrc/csrc/: cuda_api.cu
config/: c225_w32_k7_maxpool.json  c45_w32_k7_maxpool.json
criti_prefill/: hijack_llama.py  modeling_patch.py  ops.py
experiments/lveval/: .gitignore  config.py  evaluation.py  prediction.py  run_lveval.sh  utils.py
experiments/needle/: .gitignore  run_needle.sh  run_needle_in_haystack.py
